<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/abc_ic_search_api_material"
        android:hint="@string/action_search"
        android:orderInCategory="100"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item android:id="@+id/action_backup"
        android:title="@string/action_backup"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item android:id="@+id/action_restore"
        android:title="@string/action_restore"
        android:orderInCategory="102"
        app:showAsAction="never" />

    <item android:id="@+id/action_rate_app"
        android:title="@string/action_rate_app"
        android:orderInCategory="103"
        app:showAsAction="never" />

</menu>
